- Fix file uploading by setting Content-Type explicitly.

---------------------------------------------
1.7.3 (2013-09-05)

- Fix copy/move for folders.
- Fix getMetadataWithChildren for when the file/folder doesn't exist.

---------------------------------------------
1.7.2 (2013-08-22)

- Get thumbnails working (they were completely broken).

---------------------------------------------
1.7.1 (2013-08-21)

- Get chunked uploads working (they were almost completely broken).

---------------------------------------------
1.7 (2013-07-31)

- Added support for most API calls.
- A few minor backwards-incompatibilities.

---------------------------------------------
1.6 (2013-07-07)

- Completely rewritten SDK, focused on web apps (no Android support).
- Many API calls not yet implemented.
- Not backwards compatible with previous versions.