@@ -1,3 +1,4 @@
+- Fix crash in getAccountInfo, caused by new quota field "datastores".
 - Fix file uploading by setting Content-Type explicitly.
 
 ---------------------------------------------
